Bug 164936 - FILEOPEN PPTX: extra table border lines shown
Summary: FILEOPEN PPTX: extra table border lines shown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords:
Depends on:
Blocks: PPTX-Tables
  Show dependency treegraph
 
Reported: 2025-01-29 15:26 UTC by Gerald Pfeifer
Modified: 2025-04-19 04:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (2.01 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-01-29 15:26 UTC, Gerald Pfeifer
Details
Visual comparison: PowerPoint (left) - Impress (right) (140.11 KB, image/png)
2025-01-29 15:27 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2025-01-29 15:26:29 UTC
Created attachment 198860 [details]
Sample slide (PPTX)

Comparing the bug document between PowerPoint (online) and Impress
there are a number of extraneous table border lines by the latter.


Seen with

  Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: b9fd8cc18a9cd5cd4ae86b4256cf8786ea34ea89
  CPU threads: 12; OS: Linux 6.12; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

back to at least

  Version: 6.4.8.0.0+
  Build ID: 99b065ec31d032fc08ab14f66430dac4fef904a5
  CPU threads: 12; OS: Linux 6.12; UI render: default; VCL: gtk3; 
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-4, Time: 2020-10-08_08:57:08


Bug #154407 looks similar, though the present bug document was *not*
good in 7.3, so this looks like a different issue.
Comment 1 Gerald Pfeifer 2025-01-29 15:27:37 UTC
Created attachment 198861 [details]
Visual comparison: PowerPoint (left) - Impress (right)
Comment 2 m_a_riosv 2025-01-29 21:40:52 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a8ec21adf255b70bb6eeb0a1717190df303d8b26
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2025-02-23 15:25:16 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1916957d0750b5471f23f17b2867a907e0e9e0e2

tdf#164936 oox: modify getColor method to include alpha

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gerald Pfeifer 2025-02-24 13:58:02 UTC
Happy to confirm as fixed with last night's snapshot

   Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
   Build ID: 1fc03eaed2899ac041f660f54cb1facb71390ccf
   CPU threads: 12; OS: Linux 6.13; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US
Comment 5 Commit Notification 2025-02-25 01:42:31 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/0f034eaacbee30f3ff5e669d0bdfef20102cac32

tdf#164936 oox: modify getColor method to include alpha

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gerald Pfeifer 2025-02-25 12:03:47 UTC
Marking VERIFIED per my comment #4.