tdf#164936 oox: modify getColor method to include alpha

Change-Id: I141be9568b54334a17f5f781f1612423bec19999
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181861
Tested-by: Jenkins
Reviewed-by: Sarper Akdemir <sarper.akdemir@allotropia.de>
(cherry picked from commit 1916957d0750b5471f23f17b2867a907e0e9e0e2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182102
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>